fix: use getDeclaredConstructor method